# sombra-rs

./: Cargo.toml  LICENSE  README-PTBR.md  README.md  run_binary_tests.bat  run_binary_tests.sh
examples/: background_tcp_server.rs  python_script.rs
executables/: tcp_echo  tcp_echo.py
src/: error.rs  lib.rs  result.rs
src/linux/: mod.rs  sombra_imp.rs  systemctl.rs
src/windows/: sombra_imp.rs
tests/: binary_test.rs
