[package]
name = "sombra"
version = "0.1.0"
authors = ["Matheus T. dos Santos <tenoriomatheus0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
windows-service = "0.3.1"
dunce = "1.0.1"
colored = "2"

[lib]
name = "sombra"
path = "src/lib.rs"

[[bin]]
name = "sombra"
path = "src/bin/bin.rs"